--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "vuesharr",
   "version": "0.1.0",
   "private": true,
+  "description": "Stock market trading game",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "start": "npm run serve",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.26",
     "core-js": "^2.6.5",
     "npm": "^6.9.0",
     "vue": "^2.6.6"
