--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aws-amplify": "^1.1.26",
+    "aws-amplify-vue": "^0.2.9",
     "core-js": "^2.6.5",
     "npm": "^6.9.0",
     "vue": "^2.6.6"
