--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^2.6.5",
     "fusioncharts": "^3.13.4",
+    "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-fusioncharts": "^3.0.2"
   },
