--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@syncfusion/ej2-charts": "^17.1.41",
+    "axios": "^0.18.0",
     "core-js": "^2.6.5",
     "fusioncharts": "^3.13.4",
+    "moment-timezone": "^0.5.25",
     "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-fusioncharts": "^3.0.2"
