--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,10 +1,5 @@
 {
-	"auth": {
-		"cognito4295e4da": {
-			"service": "Cognito",
-			"providerPlugin": "awscloudformation"
-		}
-	},
+	"auth": {},
 	"analytics": {
 		"sharr": {
 			"service": "Pinpoint",
