--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,9 +1,4 @@
 {
 	"auth": {},
-	"analytics": {
-		"sharr": {
-			"service": "Pinpoint",
-			"providerPlugin": "awscloudformation"
-		}
-	}
+	"analytics": {}
 }
