--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@syncfusion/ej2-charts": "^17.1.41",
+    "amazon-cognito-auth-js": "^1.3.2",
     "amazon-cognito-identity-js": "^3.0.12",
     "aws-amplify": "^1.1.28",
     "aws-amplify-vue": "^0.2.11",
