Added user auth

--- a/amplify/#current-cloud-backend/backend-config.json
+++ b/amplify/#current-cloud-backend/backend-config.json
@@ -1,14 +1,9 @@
 {
 	"auth": {
-		"cognito4295e4da": {
+		"SharrAuth": {
 			"service": "Cognito",
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"analytics": {
-		"sharr": {
-			"service": "Pinpoint",
-			"providerPlugin": "awscloudformation"
-		}
-	}
+	"analytics": {}
 }
