--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,4 +1,9 @@
 {
-	"auth": {},
+	"auth": {
+		"SharrAuth": {
+			"service": "Cognito",
+			"providerPlugin": "awscloudformation"
+		}
+	},
 	"analytics": {}
 }
