--- a/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
+++ b/amplify/backend/awscloudformation/nested-cloudformation-stack.yml
@@ -77,6 +77,74 @@
 					]
 				}
 			}
+		},
+		"authSharrAuth": {
+			"Type": "AWS::CloudFormation::Stack",
+			"Properties": {
+				"TemplateURL": "https://s3.amazonaws.com/sharr-20190420070120-deployment/amplify-cfn-templates/auth/SharrAuth-cloudformation-template.yml",
+				"Parameters": {
+					"identityPoolName": "SharrIDPool",
+					"allowUnauthenticatedIdentities": false,
+					"lambdaLogPolicy": "SharrAuth_lambda_log_policy",
+					"openIdLambdaRoleName": "SharrAuth_openid_lambda_role",
+					"openIdRolePolicy": "SharrAuth_openid_pass_role_policy",
+					"openIdLambdaIAMPolicy": "SharrAuth_openid_lambda_iam_policy",
+					"openIdLogPolicy": "SharrAuth_openid_lambda_log_policy",
+					"userPoolName": "SharrUserPool",
+					"autoVerifiedAttributes": "email",
+					"mfaConfiguration": "OFF",
+					"mfaTypes": "SMS Text Message",
+					"roleName": "SharrAuth_sns-role",
+					"roleExternalId": "SharrAuth_role_external_id",
+					"policyName": "SharrAuth-sns-policy",
+					"smsAuthenticationMessage": "Your authentication code is {####}",
+					"smsVerificationMessage": "Your verification code is {####}",
+					"emailVerificationSubject": "Your Sharr verification code",
+					"emailVerificationMessage": "Your verification code is {####}",
+					"defaultPasswordPolicy": false,
+					"passwordPolicyMinLength": 8,
+					"passwordPolicyCharacters": "Requires Lowercase,Requires Uppercase,Requires Numbers,Requires Symbols",
+					"requiredAttributes": "email",
+					"userpoolClientName": "SharrAuth_app_client",
+					"userpoolClientGenerateSecret": true,
+					"userpoolClientRefreshTokenValidity": 30,
+					"userpoolClientWriteAttributes": "address,birthdate,family_name,middle_name,gender,locale,middle_name,name,nickname,phone_number,preferred_username,picture,profile,updated_at,website,zoneinfo,email",
+					"userpoolClientReadAttributes": "address,birthdate,email,family_name,middle_name,gender,locale,middle_name,name,nickname,phone_number,preferred_username,picture,profile,updated_at,website,zoneinfo,email_verified,phone_number_verified",
+					"mfaLambdaRole": "SharrAuth_totp_lambda_role",
+					"mfaLambdaLogPolicy": "SharrAuth_totp_lambda_log_policy",
+					"mfaPassRolePolicy": "SharrAuth_totp_pass_role_policy",
+					"mfaLambdaIAMPolicy": "SharrAuth_totp_lambda_iam_policy",
+					"userpoolClientLambdaRole": "SharrAuth_userpoolclient_lambda_role",
+					"userpoolClientLogPolicy": "SharrAuth_userpoolclient_lambda_log_policy",
+					"userpoolClientLambdaPolicy": "SharrAuth_userpoolclient_lambda_iam_policy",
+					"userpoolClientSetAttributes": true,
+					"useDefault": "manual",
+					"authSelections": "identityPoolAndUserPool",
+					"resourceName": "SharrAuth",
+					"thirdPartyAuth": false,
+					"usernameAttributes": "email",
+					"hostedUI": false,
+					"authRoleName": {
+						"Ref": "AuthRoleName"
+					},
+					"unauthRoleName": {
+						"Ref": "UnauthRoleName"
+					},
+					"authRoleArn": {
+						"Fn::GetAtt": [
+							"AuthRole",
+							"Arn"
+						]
+					},
+					"unauthRoleArn": {
+						"Fn::GetAtt": [
+							"UnauthRole",
+							"Arn"
+						]
+					},
+					"env": "sharrenv"
+				}
+			}
 		}
 	},
 	"Outputs": {
