--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "aws-amplify-vue": "^0.2.11",
     "axios": "^0.18.0",
     "core-js": "^2.6.5",
+    "es6-promise": "^4.2.6",
     "fusioncharts": "^3.13.4",
     "moment-timezone": "^0.5.25",
     "node-fetch": "^2.5.0",
     "npm": "^6.9.0",
     "vue": "^2.6.6",
     "vue-fusioncharts": "^3.0.2",
-    "vue-router": "^3.0.6"
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.5.0",
