--- a/amplify/#current-cloud-backend/backend-config.json
+++ b/amplify/#current-cloud-backend/backend-config.json
@@ -5,5 +5,28 @@
 			"providerPlugin": "awscloudformation"
 		}
 	},
-	"analytics": {}
+	"analytics": {},
+	"storage": {
+		"SharrStorageRes": {
+			"service": "DynamoDB",
+			"providerPlugin": "awscloudformation"
+		}
+	},
+	"function": {
+		"SharrFuncRes": {
+			"service": "Lambda",
+			"providerPlugin": "awscloudformation",
+			"build": true,
+			"dependsOn": [
+				{
+					"category": "storage",
+					"resourceName": "SharrStorageRes",
+					"attributes": [
+						"Name",
+						"Arn"
+					]
+				}
+			]
+		}
+	}
 }
