--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ yarn-error.log*
 #amplify
 amplify/\#current-cloud-backend
 amplify/.config/local-*
+amplify/backend/function/*
 build/
 dist/
 node_modules/
