--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "moment-timezone": "^0.5.25",
     "node-fetch": "^2.5.0",
     "npm": "^6.9.0",
+    "serverless": "^1.43.0",
+    "uuid": "^3.3.2",
     "vue": "^2.6.6",
     "vue-fusioncharts": "^3.0.2",
     "vue-router": "^3.0.6",
